--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,29 @@
-<h2>Forgot your password?</h2>
+<div class="content">
+	<h2>Forgot your password?</h2>
+	<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+		<%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
+		<div class="row" style="margin-bottom:5%;"></div>
+		<div class="form-group row">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-10">
+				<%= f.input :email, required: true, autofocus: true %>
+			</div>
+			<div class="col-sm-1"></div>
+		</div>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+		<div class="form-actions row">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-10">
+				<%= f.button :submit, "Send me reset password instructions" %>
+			</div>
+			<div class="col-sm-1"></div>
+		</div>
+		<div class="form-group row link-form">
+			<div class="col-sm-3"></div>
+			<div class="col-sm-6">
+				<%= render "devise/shared/links" %>
+			</div>
+			<div class="col-sm-3"></div>
+		</div>
+	<% end %>
