--- a/app/views/users/list_locations.html.haml
+++ b/app/views/users/list_locations.html.haml
@@ -1,22 +1,23 @@
 %h1 Listing locations
-
-%table
-  %thead
-    %tr
-      %th Date debut
-      %th Date fin fr
-      %th Produit
-      %th
-      %th
-      %th
-
-  %tbody
-    - @locations.each do |location|
-      %tr
-        %td= location.date_debut
-        %td= location.date_fin
-        %td= location.produit.nil? ? "Vide" : location.produit.nom
-        %td= link_to 'Show', location
-        %td= link_to 'Destroy', location, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
-%br
+.list-group-item{ :style => "background-color:#2B7FA7; height:13%;" }
+  .col-sm-2.list-title-location
+    Date Début
+  .col-sm-2.list-title-location
+    Date Fin
+  .col-sm-2.list-title-location
+    Nom du produit
+  .col-sm-6.list-title-location
+- @locations.each do |location|
+  .list-group-item
+    .col-sm-2.list-text-location
+      = location.date_debut
+    .col-sm-2.list-text-location
+      = location.date_fin
+    .col-sm-2.list-text-location
+      = location.produit.nil? ? "Vide" : location.produit.nom
+    .col-sm-1
+    .col-sm-1{ :style => "padding-top:3%;" }
+      = link_to 'Show', location, class:"btn btn-info location-show"
+    .col-sm-1
+    .col-sm-1{ :style => "padding-top:3%;" }
+      = link_to 'Destroy', location, :method => :delete, :data => { :confirm => 'Are you sure?' }, class:"btn btn-info location-destroy"
